attempt 2 at overflow fix

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ body {
     }
     .body {
         overflow: hidden !important;
+        -webkit-overflow-scrolling: touch !important;
     }
 }
 
